Update api docs css to support dark theme and hide header Add api docs link on apikeys page Make streams api endpoints more RESTful, and update API docs to be complete for streams page Improve streamkey appname validation
